# jgilrs

./: .gitignore  Cargo.toml  README.md  build.gradle  build.rs
src/main/java/xyz/ecumene/jgilrs/: Axis.java  AxisData.java  BaseEffect.java  BaseEffectTypeWrapper.java  Button.java  ButtonData.java  Code.java  Effect.java  EffectBuilder.java  Envelope.java  Event.java  Gamepad.java  GamepadId.java  GamepadState.java  Gilrs.java  Library.java  PowerInfo.java  Replay.java  Ticks.java
src/main/rust/: jni_c_header.rs  lib.rs  lib.rs.in
src/test/java/xyz/ecumene/jgilrs/natives/: GilrsDemo.java  NativeTest.java
