[package]
name = "java_gilrs"
version = "0.1.0"
authors = ["Mitchell Hynes <mshynes@mun.ca>"]
build = "build.rs"
edition = "2018"

[lib]
name = "gilrs"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/main/rust/lib.rs"

[dependencies]
log = "0.4.6"
gilrs = "0.7.1"

[build-dependencies]
env_logger = "0.6"
bindgen = "0.49.0"
log = "0.4.6"

[build-dependencies.rust_swig]
rust_swig = "../rust_swig/macroslib"

